# rusty-jam-2021

./: .gitattributes  Cargo.toml  LICENSE  README.md
data/animations/: Astra_Idle.fbx  Astra_jogging.fbx  Astra_jogging2.fbx  Astra_sword_And_Shield_Jump.fbx  Astra_sword_And_Shield_Slash.fbx  CyclopsFILE8_idle.fbx
data/models/: Astra.fbx  Cyber_Sword.fbx  CyclopsFILE8.fbx  barrel.FBX
data/scenes/: main.rgs
data/textures/: CyberPunkEspada .fbx
settings/: animations.toml  bot.toml  keymap.toml  models.toml  player.toml  scenes.toml  settings.toml  textures.toml
src/: attached_camera.rs  bot.rs  bot_ai.rs  character.rs  character_animation.rs  character_body.rs  keyboard_input.rs  main.rs  message.rs  movement_controller.rs  player.rs  resource_helper.rs  rotating_camera.rs  settings.rs
