[package]
name = "rusty-jam-2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rg3d = { path = "../rg3d", features = ["serde_integration"] }
config = "0.11"
once_cell = "1.8.0"
serde_derive = "^1.0.8"
serde = "^1.0.8"
rand = "0.8.4"

